# PrevueSync

./: .gitignore  CMakeLists.txt  README.md  build.bat
src/: AnalysisWindow.cpp  AnalysisWindow.h  CliRunner.cpp  CliRunner.h  DeltaCopy.cpp  DeltaCopy.h  GuiCommon.cpp  GuiCommon.h  GuiDialogs.cpp  GuiDialogs.h  Main.cpp  MainWindow.cpp  MainWindow.h  NetworkShare.cpp  NetworkShare.h  PathFilter.cpp  PathFilter.h  PreviewWindow.cpp  PreviewWindow.h  ScheduleDialog.cpp  ScheduleDialog.h  SyncBackup.cpp  SyncBackup.h  SyncEngine.cpp  SyncEngine.h  SyncExecutor.cpp  SyncExecutor.h  SyncGuiWorker.cpp  SyncGuiWorker.h  SyncJob.cpp  SyncOptions.h  SyncPlan.cpp  SyncPlan.h  SyncPlanAnalysis.cpp  SyncPlanAnalysis.h  SyncProfile.cpp  SyncProfile.h  TaskScheduler.cpp  TaskScheduler.h
tests/: TestMain.cpp
